# DATA-RAG-SUS

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: 01-objetivo.md  02-arquitetura.md  03-estrutura-repositorio.md  04-stack-tecnologica.md  05-fluxo-funcionamento.md  06-etapas-implementacao.md  06.1-dominio-colunas-completas.md  06.2-estatisticas-base-processada.md  06.3-consultas-duckdb.md  07-prompt-agente.md  08-criterios-qualidade.md  09-roadmap.md  10-licenca.md  README.md
draftnotes/: .gitkeep
notebooks/: exploration.ipynb
scripts/: generate_06_2_stats.py
scripts/r/: README.md  analise_ortopedia.R  fallback_download_only.R  script_dados_unificados.r
src/: __init__.py
src/api/: main.py
src/data/: __init__.py  dictionary.py  ingest.py  ingestion.py  log_util.py  transform.py
src/rag/: __init__.py  agent.py  executor.py  prompts.py  sql_generator.py
tests/: __init__.py  test_queries.py  test_sql_generation.py
